--- a/css-chadha/styles.css
+++ b/css-chadha/styles.css
@@ -53,7 +53,7 @@ h1 {
 }
 
 .pro-container {
-  margin-left: 50px;
+  margin-left: 85px;
 }
 
 .profile-box {
@@ -62,7 +62,7 @@ h1 {
   border-style: solid;
   border-width: 10px;
   border-color: #ff4c68;
-  margin: 0 2rem;
+  margin: 2rem;
   width: 25%;
 }
 
