--- a/css-chadha/styles.css
+++ b/css-chadha/styles.css
@@ -52,18 +52,17 @@ h1 {
   display: flex;
 }
 
-.pro-container {
-  margin-left: 85px;
-}
+
 
 .profile-box {
   text-align: center;
   padding: 5%;
+  border-radius: 20%;
   border-style: solid;
   border-width: 10px;
   border-color: #ff4c68;
   margin: 2rem;
-  width: 25%;
+  width: 27%;
 }
 
 .fa-user {
