--- a/css-chadha/styles.css
+++ b/css-chadha/styles.css
@@ -1,3 +1,9 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
 }
@@ -48,13 +54,16 @@ h1 {
 }
 
 #profiles {
-  padding: 9% 9% 3%;
+  padding: 8% 2% 2%;
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 
 
 .profile-box {
+
   text-align: center;
   padding: 5%;
   border-radius: 20%;
@@ -62,7 +71,8 @@ h1 {
   border-width: 10px;
   border-color: #ff4c68;
   margin: 2rem;
-  width: 27%;
+  width: 25%;
+
 }
 
 .fa-user {
@@ -79,6 +89,8 @@ h2 {
   color: #ef8172;
   margin-bottom: 1.5rem;
   font-size: 1.2rem;
+  display: block;
+  margin: 2rem auto ;
 }
 
 .profile-button:hover {
