--- a/css-chadha/styles.css
+++ b/css-chadha/styles.css
@@ -1,8 +1,4 @@
-*{
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
+
 
 body {
   font-family: 'Montserrat', sans-serif;
@@ -127,7 +123,10 @@ h2:hover {
 }
 
 @media (max-width: 900px) {
-  #profiles {
-    padding: 80px;
+  .raj-profile {
+    position : static;
+    margin: 40px auto;
+    width: 70%;
+
   }
 }
