--- a/css-chadha/styles.css
+++ b/css-chadha/styles.css
@@ -125,8 +125,8 @@ h2:hover {
 @media (max-width: 900px) {
   .raj-profile {
     position : static;
-    margin: 100px auto;
-    width: 70%;
+    margin: 100px ;
+    width: 60%;
 
   }
 }
